--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
     text-align: center;
     font: 5em sans-serif;
 ">
-    <div class="typing-txt" onclick="changeText(0, '각코는 사랑입니다.')">모<span class="typing"></span></div>
-    <div class="typing-txt" onclick="changeText(1, '잡고 열심히 만들었습니다!')">각<span class="typing"></span></div>
-    <div class="typing-txt" onclick="changeText(2, '딩 하는 건 너무 재밌네요!!')">코<span class="typing"></span></div>
-    <script type="text/javascript" src="./main.js"></script>
+    <div class="btn" onclick="consoleLog()">콘솔에 로그가 출력됩니다!</div>
+    <script src="./main.js"></script>
 </body>
 </html>
