12월 27일 모각코 공부
자바스크립트를 이용한 사칙연산
let과 var 차이

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     text-align: center;
     font: 5em sans-serif;
 ">
-    <div class="btn" onclick="consoleLog()">콘솔에 로그가 출력됩니다!</div>
+    <h1>이번에는 자바스크립트를 이용해 사칙연산을 해보겠습니다. 😊😊</h1>
     <script src="./main.js"></script>
 </body>
 </html>
