--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css"/>
+    <link rel="stylesheet" href="./static/style.css"/>
     <title>안녕하세요!!</title>
 </head>
 <body>
@@ -14,6 +14,6 @@
         <span onclick="stopClock()">멈춤</span>
         <span onclick="resetClock()">초기화</span>
     </div>
-    <script src="./main.js"></script>
+    <script src="./static/main.js"></script>
 </body>
 </html>
