12월 29일 모각코 공부
함수를 이용해 전광판 만들기

--- a/index.html
+++ b/index.html
@@ -8,12 +8,8 @@
     <title>안녕하세요!!</title>
 </head>
 <body>
-    <p id="time">00:00:00</p>
-    <div>
-        <span class="start" onclick="startClock()">시작</span>
-        <span onclick="stopClock()">멈춤</span>
-        <span onclick="resetClock()">초기화</span>
-    </div>
+    <div class="board"></div>
+    <div><span class="btn" onclick="btn_click()">spear</span></div>
     <script src="./static/main.js"></script>
 </body>
 </html>
