--- a/index.html
+++ b/index.html
@@ -8,10 +8,19 @@
     <title>안녕하세요!!</title>
 </head>
 <body>
-    <div id="name"></div>
-    <button id="click_event">전화걸기</button>
-    <div></div>
-    <div id="number"></div>
+    <div class="layout">
+        <div class="cat_says">
+            냐앙~
+        </div>
+        <div class="cat">
+        </div>
+        <div class="input_layout">
+            <input type="text" id="console" class="input_style">    
+        </div>
+        <div class="button" onclick=check_text()>
+            시키기
+        </div>       
+    </div>
     <script src="./static/main.js"></script>
 </body>
 </html>
