1월 6일 모각코 공부

--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./static/style.css"/>
     <title>안녕하세요!!</title>
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
 </head>
 <body>
     <div class="layout">
+        <div id = "typed"></div>
         <div class="cat_says">
-            냐앙~
+            삐까~
         </div>
         <div class="cat">
         </div>
