1월 7일 모각코 공부

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="input_layout">
             <input type="text" id="console" class="input_style">    
         </div>
-        <div class="button" onclick=check_text()>
+        <div class="button" onclick=text_check()>
             시키기
         </div>       
     </div>
